--- a/apputveckling/src/main/webapp/index.xhtml
+++ b/apputveckling/src/main/webapp/index.xhtml
@@ -6,17 +6,17 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-<ui:composition template="/templates/template.xhtml"
-                xmlns="http://www.w3.org/1999/xhtml"
-                xmlns:h="http://xmlns.jcp.org/jsf/html"
-                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                xmlns:f="http://xmlns.jcp.org/jsf/core">
+<h:head>
+    <title>My Application</title>
+    <script type="text/javascript">
+        window.location.href = 'views/admin_home.xhtml';
+    </script>
+</h:head>
 
-    <ui:define name="content">
-        <h1>"#{membersbean.name}"</h1>
-        <button onclick="location.href='admin_home.xhtml'">Press here</button>
-    </ui:define>
-
-</ui:composition>
-
+<h:body>
+    <div class="nav">
+        <a class="navbar">Home</a>
+    </div>
+    <h1>"#{membersbean.name}"</h1>
+</h:body>
 </html>
