--- a/apputveckling/src/main/webapp/index.xhtml
+++ b/apputveckling/src/main/webapp/index.xhtml
@@ -7,7 +7,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
 <h:head>
-    <title>My Application</title>
+    <title>My Application2</title>
     <script type="text/javascript">
         window.location.href = 'views/admin_home.xhtml';
     </script>
